<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    android:orientation="vertical"
    tools:context=".User.Create_Account">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif-light"
        android:text="Enter Email : "
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/create_Username_Id"
        style="@style/design_1"
        android:background="@drawable/custom_edit_text"
        android:drawableLeft="@drawable/ic_email_24"
        android:drawablePadding="15dp"
        android:hint="@string/userEmail"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif-light"
        android:text="Enter Password : "
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/create_password_Id"
        style="@style/design_1"
        android:background="@drawable/custom_edit_text"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/create_Id"
        style="@style/design_1"
        android:background="@drawable/custom_button"
        android:text="@string/create"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progressbar_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>